--- a/paper/src/evaluation.tex
+++ b/paper/src/evaluation.tex
@@ -6,13 +6,15 @@ The cloud environment is shown as Table.\ref{evaluation:amazon_environment}
 \begin{table}[h]
 \centering
 \begin{tabular}{|c|c|}
-Region				&		Tokyo		\\
-Instance Type		&		m3.xlarge	\\
-vCPUs				&		4			\\
-ECUs				&		13			\\
-Memory				&		15GiB		\\
-Instance Storage	&		2*40GB(SSD)	\\
-Network Performance	&		High		\\
+\hline
+\cellcolor{lightgray} Region				&		Tokyo		\\
+\hline
+\cellcolor{lightgray} Instance Type		&		m3.xlarge	\\
+\cellcolor{lightgray} vCPUs				&		4			\\
+\cellcolor{lightgray} ECUs				&		13			\\
+\cellcolor{lightgray} Memory				&		15GiB		\\
+\cellcolor{lightgray} Instance Storage	&		2*40GB(SSD)	\\
+\cellcolor{lightgray} Network Performance	&		High		\\
 \end{tabular}
 \caption{evaluation environment}
 \label{evaluation:amazon_environment}
