--- a/paper/src/modeling-2.tex
+++ b/paper/src/modeling-2.tex
@@ -62,9 +62,10 @@ C_{total} = \{　\acute{n} \times \text{C}_{cn}+ (b \times \text{C}_{bn} \times
 
 where $C_{cn}$, $C_{bn}$ and $C_{mn}$ denote costs per second (${\it \$} /sec$)
 of a compute node, a burst buffer node, and a meta data server node
-respectively, $etime$ denotes the execution time of the application. For the
-fairness of the cost, the cost for burst buffers is charged depending on the
-number of compute nodes used by the application in this model. By using this
+respectively, $etime$ denotes the execution time of the application. If we
+use the same instances for there nodes, the cost becomes 
+$C_{cn}=C_{bn}=C_{mn}$.
+For the fairness of the cost, the cost for burst buffers is charged depending on the number of compute nodes used by the application in this model. By using this
 model, we estimate the overall cost of an application run. 
 
 
