--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -103,7 +103,7 @@ We implement a prototype, and evaluate the system in Amazon
 EC2/S3.
 \kento{Let us describe about the modeling.}
 The \xtqmod{quantitative} experimental and simulation evaluations show that our prototype system
-can achieve significant improvement in I/O throughput.
+can achieve up to 1.5 times improvement in the execution time of real applications.
 \kento{Let us include ``quantitative'' results of both experimental results and
 simulation results.}
 \end{abstract}
