--- a/paper/src/modeling-2.tex
+++ b/paper/src/modeling-2.tex
@@ -25,7 +25,7 @@ throughput of the target compute node, $T_{a}(i)$, becomes
 $T_{a}(i)=\frac{T_{b}}{i+1}$ where $T_{b}$ is a peak I/O bandwidth of a single
 burst buffer node. Thus, overall average I/O throughput, $T$, can be computed as:
 \begin{equation}
-\text{T}=\sum_{i=0}^{n-1} P_{i} \times T_{a}(i)
+\text{T}=\sum_{i=0}^{n-1} P_{i} \times T_{a}(i)\label{model:throughput}
 %\text{T}=\frac{T}{e} 
 %e=1+\frac{n-1}{m}
 \end{equation}
