--- a/paper/src/conclusion.tex
+++ b/paper/src/conclusion.tex
@@ -5,8 +5,8 @@ In this paper, we propose a cloud based burst buffer system to burst the I/O thr
 We implement a prototype of our proposal system, and evaluate it on Amazon EC2/S3 public cloud.
 We achieve an up to 3 times speed up for a single user in reading, as well as 4 times speed
 up for the whole system in writing.
-We also simulate three data intensive applications on our proposal system, and achieved up to 4
-times speed up on the execution time.
+We also simulate the execution of three real data intensive applications on our proposal system in
+a real environment, and achieved up to 1.5 times speed up in the execution time of real application.
 
 However since this is a prototype of our proposal system, there are still many limitation in the
 system, may leading to under utilization of node bandwidth, and master node may easily become the
