--- a/paper/src/modeling-2.tex
+++ b/paper/src/modeling-2.tex
@@ -43,6 +43,7 @@ By using the model, we can estimate the throughput of applications in
 environments where multiple compute nodes are running and randomly accessing the
 burst buffer nodes.
 
+\begin{comment}
 \subsection{Modeling of Cost}
 In addition to I/O throughput of the cloud-based burst buffers, another
 important aspect is the cost.
@@ -67,5 +68,5 @@ use the same instances for there nodes, the cost becomes
 $C_{cn}=C_{bn}=C_{mn}$.
 For the fairness of the cost, the cost for burst buffers is charged depending on the number of compute nodes used by the application in this model. By using this
 model, we estimate the overall cost of an application run. 
-
+\end{comment}
 
