--- a/paper/src/implementation.tex
+++ b/paper/src/implementation.tex
@@ -6,7 +6,7 @@ To achieve the challenges, we design and implement our cloud-based burst buffer.
 \subsection{The Role of The Cloud-base Burst Buffers}
 \begin{figure}[tb]
 	\centering
-	\includegraphics[width=8cm]{img/architecture_overview}
+	\includegraphics[width=8cm]{img/architecture_overview-2}
 	\caption{overall illustrate of I/O Burst Buffer Architecture}
 	\label{architecture:overview}
 \end{figure}
@@ -25,12 +25,12 @@ Hence, the applications can benefit from the two-level of storage hierarchy
 without knowing the underlying operations.
 
 \subsection{Design of The Cloud-base Burst Buffers}
-\begin{figure}
+\begin{figure*}
 \centering
-\includegraphics[width=8cm]{img/prototype_overview}
-\caption{overview of prototype}
+\includegraphics[width=16cm]{img/prototype_overview-2}
+\caption{Overview of the prototype}
 \label{implemetation:overview of prototype}
-\end{figure}
+\end{figure*}
 
 % In order to validate the effectiveness of the cloud-based burst buffers in real
 % environments,  evaluate our architecture in a real environment and compare
@@ -150,7 +150,7 @@ connect to burst buffer nodes directly for sending or receiving data.
 
 \begin{figure}[tb]
 	\centering
-	\includegraphics[width=8cm]{img/client_daemon}
+	\includegraphics[width=8cm]{img/client_daemon-2}
 	\caption{Client Daemon}
 	\label{implementaion:client_daemon}
 \end{figure}
